--- a/BeautifulMauiClientApplication/BeautifulMauiClientApplication/AppShell.xaml
+++ b/BeautifulMauiClientApplication/BeautifulMauiClientApplication/AppShell.xaml
@@ -4,12 +4,28 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:BeautifulMauiClientApplication"
-    Shell.FlyoutBehavior="Disabled"
     Title="BeautifulMauiClientApplication">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+    <!--  Flyout header (optional)  -->
+    <Shell.FlyoutHeader>
+        <Grid BackgroundColor="LightGray" HeightRequest="100">
+            <Label
+                FontSize="24"
+                HorizontalOptions="Center"
+                Text="My App"
+                VerticalOptions="Center" />
+        </Grid>
+    </Shell.FlyoutHeader>
+
+
+    <!--  https://learn.microsoft.com/de-de/dotnet/maui/fundamentals/shell/flyout?view=net-maui-8.0  -->
+    <FlyoutItem Title="Main" Icon="appiconfg.svg">
+        <Tab>
+            <ShellContent
+                Title="Main"
+                ContentTemplate="{DataTemplate local:MainView}"
+                Route="MainPage" />
+        </Tab>
+    </FlyoutItem>
 
 </Shell>
