--- a/BeautifulMauiClientApplication/BeautifulMauiClientApplication/MainView.xaml
+++ b/BeautifulMauiClientApplication/BeautifulMauiClientApplication/MainView.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
-    x:Class="BeautifulMauiClientApplication.MainPage"
+    x:Class="BeautifulMauiClientApplication.MainView"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:beautifulMauiClientApplication="clr-namespace:BeautifulMauiClientApplication"
