--- a/BeautifulMauiClientApplication/BeautifulMauiClientApplication/Example/RandomContent2View.xaml
+++ b/BeautifulMauiClientApplication/BeautifulMauiClientApplication/Example/RandomContent2View.xaml
@@ -4,7 +4,8 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:beautifulMauiClientApplication="clr-namespace:BeautifulMauiClientApplication"
-    x:DataType="beautifulMauiClientApplication:RandomContent2ViewModel">
+    xmlns:example="clr-namespace:BeautifulMauiClientApplication.Example"
+    x:DataType="example:RandomContent2ViewModel">
 
     <VerticalStackLayout>
         <Label
